# py4cast

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.ewc_flash_attn  Dockerfile.lint  README.md  docker-build.sh  env.yaml  env_conda.yaml  grib_metadata_matcher.py  grib_metadata_writer.py  lint.sh  oci-image-build.sh  pnia_plugin_example.py  py4cast_plugin_example.py  pyproject.toml  reformat.sh  reformat_and_lint.sh  requirements.txt  requirements_lint.txt  runai_settings.sh  setup.py
.github/workflows/: tests.yml
IO/: writing_outputs.py
config/: config_cli_inference.yaml  config_cli_main.yaml  halfunet32.json  smeagol.json  smeagol1h.json  smeagoldev.json  titan.json
config/CLI/: dummy.yaml  fit.yaml  halfunet.yaml  inference.yaml  poesy.yaml  test.yaml  titan.yaml  (+2 more)
doc/: add_features_contribute.md  features.md  installEWC.md  installMF.md  known_issues.md  num_steps.md  titan.md
inputs_outputs/: writing_outputs.py
logs/: config.yaml
pnia/: base.py  lightning.py  losses.py  observer.py  plots.py  plots_grid.py  settings.py  smeagol_dataset.py  test_argparse.py  titan_dataset.py  utils.py
py4cast/: ARLightningModule.py  MAE_2_lightning.py  MAE_lightning.py  MAE_lightning_no_cli  MAE_lightning_no_cli.py  arlightningmodule.py  callbacks.py  cli.py  dummylightningmodule.py  forcingutils.py  lightning.py  losses.py  metrics.py  models.py  observer.py  plots.py  settings.py  titandatamodule.py  utils.py  write_gribs.py  writing_outputs.py
tests/: test_datasets.py  test_gifs.py  test_io.py  test_lightning.py  test_models.py  test_poesy.py
(+169 files in other folders)
